# SANAI

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/ai_engine/: assistant.py  chatgpt.py  initialize_assistants.py  speech_to_text.py  text_to_speech.py  translator.py
backend/app/auth/: auth.py
backend/app/config/: database.py  settings.py
backend/app/email_sent/templates/: password_reset.html
backend/app/manage_db/: manage_assiatance_rooms.py  manage_translation_records.py
backend/app/models/: __init__.py  assistance_room_model.py  assistant_model.py  translation_record_model.py  user_model.py
backend/app/routers/: __init__.py  assistance_rooms.py  assistant_responds.py  auth.py  developer.py  manager.py  playgrounds.py  preview.py  translation_records.py  translator_responds.py  user.py  voice_service.py
backend/app/schemas/: assistance_room_schema.py  assistant_schema.py  tokens_schema.py  translation_record_schema.py  user_schema.py
backend/app/utils/: send_email.py  userSerializers.py
docs/: README.md  architecture.md  deployment.md  environment.md  local-development.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  authToken.ts  axios.ts  main.tsx
frontend/src/api.services/: apiError.ts  assistance_rooms.service.ts  assistant.service.ts  auth.service.ts  manager.service.ts  preview.service.ts  translation_records.service.ts  translator.service.ts  user.service.ts  voice.service.ts
(+83 files in other folders)
