[project]
name = "sanai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.0",
    "beanie>=1.29.0",
    "python-dotenv>=1.0.1",
    "python-decouple>=3.8",
    "PyJWT>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "Jinja2>=3.1.4",
    "email-validator>=2.2.0",
    "fastapi-mail>=1.4.2",
    "fastapi-sso>=0.17.0",
    "pyotp>=2.9.0",
    "openai>=1.75.0",
    "elevenlabs>=1.13.0",
    "logfire[fastapi]>=3.0.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
